# pickler.js

./: .gitignore  LICENSE  make  pickler.cabal
exe/: Main.hs
src/: Object.hs  Pickler.hs  Test.hs  Text.hs
src/Pickler/: Object.hs  Text.hs
