name:                pickler
version:             0.1
synopsis:            Parser/pretty-printer combinators.
license:             OtherLicense
author:              Silk B.V.
maintainer:          code@silkapp.com
copyright:           2014 Silk B.V.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  src/*.hs
  src/Pickler/*.hs
data-files:           pickler.cabal
x-fay-packages:       fay-text
x-fay-root-modules:   Pickler
x-fay-output-dir:     dist/out
x-fay-source-dir:     src
x-fay-strict-modules: Pickler
x-fay-library:        True

executable make-pickler
  build-tools:       cpphs
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    exe
  main-is:           Main.hs
  build-depends:
      base >= 4.5 && < 4.8
    , fay >= 0.19 && < 0.21
    , fay-builder >= 0.1.0.4 && < 0.2
    , fay-text >= 0.3.0.1 && < 0.4
    , text >= 0.11 && < 1.2
    , process >= 1.0 && < 1.3
    , filepath >= 1.2 && < 1.4
    , directory >= 1.1 && < 1.3
    , base-extended == 0.4.*
